# FluOpti

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml
2 - Software/: main.py  simple_test.py  thread_test.py
2 - Software/FluOpti/: pi_adc.py  pi_pwm.py
3 - Hardware/FOdriver_V2.0/: ADC.SchDoc  ConectoresEntrada.SchDoc  DCDC_stepdown.SchDoc  FOdriver_V2.0.PrjPcb  HighCurrentDriver.SchDoc  PCB1.PcbDoc  TopLevel.SchDoc  analogPath.SchDoc  genPWM.SchDoc
3 - Hardware/old_Genericleddriver/: analogPath.SchDoc
3Dmodels/: Flat_cam_holder.scad  FluOpti_Main.scad  FluOpti_Main_Wsf.scad  circle_diffuser_holder.scad
3Dmodels/STLs/: base_holder.stl  circle_diffuser_holder_centered.stl  cone.stl  cone_hull_short.stl  diffuser_holder.stl  led_ring_enclosure.stl  lighting_base.stl  plate_holder.stl  square_base.stl  top_part.stl
docs/: conf.py  index.md  index.rst  modules.rst  requirements.txt  something.rst
docs/Requerimientos/: index.rst
docs/source/: conf.py  index.rst
hardware/: README.md
hardware/FOdriver_V2.0/: ADC.SchDoc  ConectoresEntrada.SchDoc  ConectoresSalida.SchDoc  DCDC_stepdown.SchDoc  DCDC_stepup.SchDoc  Drivers.SchDoc  Job1.OutJob  (+5 more)
software/: LED_OFF.py  LED_ON.py  TEST_PID.py  TODO_Interfaz.txt  comments.txt  datos_temperatura.csv  fluoControlador.py  fluoControlador_v2.py  fluoControlador_v3.py  plot_bloque.py  readme.md  secuenciador_test.py  secuenciador_test_v3.py  simple_capture.py  simple_test.py  test_GPIO.py  test_Qtrhreads  test_graficopyqt.py  test_leds_gui.py  test_threads_leds.py  timelapse.py  tl_config.txt
(+265 files in other folders)
