[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Description of your project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add your project dependencies here

[tool.poetry.dev-dependencies]
# Add development dependencies here, such as testing frameworks, linters, etc.

[tool.poetry.scripts]
# Add script entry points here if your project provides any

[tool.poetry.extras]
# Define optional extras here if your project supports them

[tool.poetry.publish]
# Configure options for publishing your project, such as PyPI or other package repositories

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
